--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,44 @@
 <!DOCTYPE html>
-<html>
-
+<br>
+<body>
 <head>
   <meta charset="utf-8">
   <title>Analizador de texto</title>
   <link rel="stylesheet" href="style.css" />
 </head>
+  
+  
+  <header>
+    <h1>Text Analyzer</h1>
+  
+  </header>
 
-<body>
+  <h3>Ingresa el texto que deseas analizar:</h3>
+
+<form action="#" method="post">
+  <textarea name="user-input" rows="10" cols="50" ></textarea>
+</form>
+
+
+  <button id="reset-button">Limpiar Texto</button>
+
+
+<section>
+  <ul>
+    <li class="word-count" data-testid="word-count">Palabras:</li>
+    <li class="character-count" data-testid="character-count">Caracteres:</li>
+    <li class="character-no-spaces-count" data-testid="character-no-spaces-count">Caracteres sin espacios:</li>
+    <li class="number-count" data-testid="number-count">Números:</li>
+    <li class="number-sum" data-testid="number-sum">Suma de Números:</li>
+    <li class="word-length-average" data-testid="word-length-average">Longitud de palabras:</li>
+  </ul>
+</section>
+
+
+
+  <footer>
+    <p>Desarrollado por: Raiza Carolina Gatica</p>
+  </footer>
   <script src="index.js" type="module"></script>
 </body>
 </html>
